test/parsing/precedence/new-c-q-q.good
new-c-q-q.chpl:2: error: syntax error near '?'
